1998-11-29  Anthony Green  <green@cygnus.com>

	* index.html: Created (bootstrapped from old web pages).
